# realsense-mlx

./: .gitignore  LICENSE  README.md  SESSION_RESTART.md  pyproject.toml
.github/workflows/: test.yml
benchmarks/: bench_all.py  bench_pytest.py
prds/: PRD-00-PROJECT-SETUP.md  PRD-01-FORMAT-CONVERTERS.md  PRD-02-POINTCLOUD.md  PRD-03-DEPTH-FILTERS.md  PRD-04-ALIGN.md  PRD-05-COLORIZER.md  PRD-06-DISPLAY-VIEWER.md  PRD-07-INTEGRATION-TESTING.md  PRD-08-BENCHMARKS.md  README.md
references/: progress_log.md
scripts/: benchmark_vs_rs2.py  live_benchmark.py  live_depth_demo.py  offline_demo.py  quick_check.py  stereo_depth_demo.py  stress_test.py
src/realsense_mlx/: __init__.py  processor.py
src/realsense_mlx/backends/: __init__.py  base.py  cpu_backend.py  mlx_backend.py
src/realsense_mlx/bridges/: __init__.py  ros2_bridge.py
src/realsense_mlx/capture/: __init__.py  multi_camera.py  pipeline.py  recorder.py
src/realsense_mlx/converters/: __init__.py  format_converter.py
src/realsense_mlx/display/: __init__.py  viewer.py
tests/: conftest.py  test_align.py  test_capture.py  test_colorizer.py  test_depth_stats.py  test_display.py  test_format_converters.py  test_import_safety.py  test_mesh.py  test_multi_camera.py  test_ply_export.py  test_pointcloud.py  test_processor.py  test_recorder.py  test_robotics.py  test_ros2_bridge.py  test_shm_cross_process.py  test_shm_transport.py  test_stereo.py
tests/test_filters/: test_bilateral.py  test_decimation.py  test_disparity.py  test_hole_filling.py  test_pipeline.py  test_spatial.py  test_temporal.py
(+27 files in other folders)
